--- a/app/index.html
+++ b/app/index.html
@@ -419,6 +419,82 @@
       </div>
     </section>
 
+    <section class="about-section">
+
+      <div class="container">
+
+        <div class="row">
+
+          <div class="col-md-6 div-left">
+            
+            <p class="About-company">о компании</p>
+
+            <p><span>основное направление деятельности компании:</span></p>
+
+            <p>Продажа, разработка и внедрение интегрированных систем безопасности в офисных помещениях, загородных домовладениях, промышленных и банковских комплексах</p>
+
+          </div>
+
+          <div class="col-md-6 div-right">
+
+            <p>Компания предоставляет полный комплекс услуг в сфере безопасности, установка и продажа «под ключ» (обследование, продажа, проектирование, прокладка слаботочных сетей, шеф-монтаж, техническое и послегарантийное обслуживание) интегрированных комплексов безопасности любого уровня сложности, включающих в себя системы охранно-пожарной сигнализации (в том числе радиоканальные), системы пожаротушения, системы ограничения доступа, аналоговые и цифровые системы видеонаблюдения.</p>
+
+          </div>
+
+          <div class="col-md-12 div-under">
+
+            <img src="images/line.png" class="img-responsive img-line" alt="">
+            <img src="images/(Group)1-.png" class="img-responsive Group-1" alt="">
+            <img src="images/(Group)2-.png" class="img-responsive Group-2" alt="">
+            <img src="images/(Group)3-.png" class="img-responsive Group-3" alt="">
+            <img src="images/(Group)4-.png" class="img-responsive Group-4" alt="">
+            <img src="images/(Group)5-.png" class="img-responsive Group-5" alt="">
+
+
+            <div class="col-md-2 first-div">
+
+              <p>структура нашей работы:</p>
+
+            </div>
+
+            <div class="col-md-2 second-div">
+
+              <p>Проектирование решений для систем автоматизации</p>
+
+            </div>
+
+            <div class="col-md-2 third-div">
+
+              <p>Закупка материалов и оборудования</p>
+
+            </div>
+
+            <div class="col-md-2 fourth-div">
+
+              <p>Монтаж и установка оборудования</p>
+
+            </div>
+
+            <div class="col-md-2 fifth-div">
+
+              <p>Адаптация установленных решений</p>
+
+            </div>
+
+            <div class="col-md-2 sixth-div">
+
+              <p>Техническое обслуживание реализованных решений</p>
+
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </section>
+
     <div class="footer">
 
       <p>♥ from the Yeoman team</p>
