--- a/app/index.html
+++ b/app/index.html
@@ -150,9 +150,7 @@
             
             <div class="info">
 
-              <h1>universum</h1>
-
-              <h3>technologies</h3>
+              <h1><span>universum</span> technologies</h1>
 
               <p>комплексные системы безопасности и автоматизации</p>
 
