--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
 
           </div>          
 
-          <div  class="col-md-7 div-contact">
+          <div  class="col-md-6 div-contact">
 
             <ul class="nav nav-pills header-contact">
 
@@ -826,7 +826,7 @@
 
                <li class="section-contact-info">
 
-                <a href="tel:+74952121503" class="section-contact-phone">+7 (495)<span> 212-1503</span></a>
+                <a href="tel:+74952121503" class="section-contact-phone">+7 (495) 212-1503</a>
 
                 <a href="mailto:#" class="section-contact-link">mail@utsystem.ru</a>
 
